Drop references to `[all]`. (#339)

--- a/docs/cookbook/mcp_agent.ipynb
+++ b/docs/cookbook/mcp_agent.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install 'any-agent[all]'\n",
+    "%pip install 'any-agent'\n",
     "\n",
     "import nest_asyncio\n",
     "\n",
