408 A2A agentskills should be configurable (#429)
* refactor: Support custom AgentSkill definitions and update serving configuration to use A2AServingConfig

* Documentation updates

* lint

* Updates from PR

--- a/docs/cookbook/a2a_as_tool.ipynb
+++ b/docs/cookbook/a2a_as_tool.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
-    "from any_agent.config import MCPStdio, ServingConfig, TracingConfig\n",
+    "from any_agent.config import MCPStdio, TracingConfig\n",
+    "from any_agent.serving import A2AServingConfig\n",
     "\n",
     "# This MCP Tool relies upon uvx https://docs.astral.sh/uv/getting-started/installation/\n",
     "time_tool = MCPStdio(\n",
@@ -101,7 +102,7 @@
     "    tracing=TracingConfig(console=False),\n",
     ")\n",
     "(time_task, time_server) = await time.serve_async(\n",
-    "    ServingConfig(port=5000, endpoint=\"/time\")\n",
+    "    A2AServingConfig(port=5000, endpoint=\"/time\")\n",
     ")\n",
     "\n",
     "\n",
@@ -116,7 +117,7 @@
     "    tracing=TracingConfig(console=False),\n",
     ")\n",
     "(weather_task, weather_server) = await weather_expert.serve_async(\n",
-    "    ServingConfig(port=5001, endpoint=\"/location_recommender\")\n",
+    "    A2AServingConfig(port=5001, endpoint=\"/location_recommender\")\n",
     ")"
    ]
   },
