--- a/docs/cookbook/serve_a2a.ipynb
+++ b/docs/cookbook/serve_a2a.ipynb
@@ -80,7 +80,8 @@
    "outputs": [],
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
-    "from any_agent.config import MCPStdio, ServingConfig, TracingConfig\n",
+    "from any_agent.config import MCPStdio, TracingConfig\n",
+    "from any_agent.serving import A2AServingConfig\n",
     "\n",
     "# This MCP Tool relies upon uvx https://docs.astral.sh/uv/getting-started/installation/\n",
     "time_tool = MCPStdio(\n",
@@ -100,7 +101,7 @@
     "    ),\n",
     "    tracing=TracingConfig(console=False),\n",
     ")\n",
-    "(time_task, time_server) = await time.serve_async(ServingConfig(port=5000))"
+    "(time_task, time_server) = await time.serve_async(A2AServingConfig(port=5000))"
    ]
   },
   {
