Add workflow step to check jupyter notebooks (#428)
* Initial implementation

* Fix stdio init params

* Review rework

* Move cookbook tests to their own workflow

--- a/docs/cookbook/mcp_agent.ipynb
+++ b/docs/cookbook/mcp_agent.ipynb
@@ -104,11 +104,14 @@
     "    tools=[\n",
     "        \"get_current_time\",\n",
     "    ],\n",
+    "    client_session_timeout_seconds=30,\n",
     ")\n",
     "\n",
     "# This MCP tool relies upon npx https://docs.npmjs.com/cli/v8/commands/npx which comes standard with npm\n",
     "airbnb_tool = MCPStdio(\n",
-    "    command=\"npx\", args=[\"-y\", \"@openbnb/mcp-server-airbnb\", \"--ignore-robots-txt\"]\n",
+    "    command=\"npx\",\n",
+    "    args=[\"-y\", \"@openbnb/mcp-server-airbnb\", \"--ignore-robots-txt\"],\n",
+    "    client_session_timeout_seconds=30,\n",
     ")\n",
     "\n",
     "\n",
