--- a/docs/cookbook/serve_a2a.ipynb
+++ b/docs/cookbook/serve_a2a.ipynb
@@ -92,7 +92,7 @@
     "    ],\n",
     ")\n",
     "\n",
-    "time = AnyAgent.create(\n",
+    "time = await AnyAgent.create_async(\n",
     "    \"tinyagent\",  # See all options in https://mozilla-ai.github.io/any-agent/\n",
     "    AgentConfig(\n",
     "        model_id=\"gpt-4.1-mini\",\n",
