Sync Version of a2a_tool (#431)
* A2A Tool for sync usage.

* MCP really only works in an async environment because we are managing the lifecycle inside of the agent.

* Revert "MCP really only works in an async environment because we are managing the lifecycle inside of the agent."

This reverts commit 7110d6908b4911793f1d39cd411f560c234b568e.

* loop handling

* server async loop

* Fix asyncio calls in wrap tools, and improve dynamic free port finding (it's important when running in github action in multi proc setup)

* lint

* Updates based on PR feedback

* docs

* dynamic and deterministic ports

* lint

* Gracefull process killing

* lint

* mock web result

* server check

* Enhance date prompt and increase sleep duration in tests for better stability

* sleeps on agent serving

--- a/docs/cookbook/a2a_as_tool.ipynb
+++ b/docs/cookbook/a2a_as_tool.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "### Configure and use the Third Agent \n",
     "\n",
-    "Now that the first two agents are serving over A2A, our main agent can be given access to use it just like a tool! In order to do this you use the `a2a_tool` function which retrieves the info about the agent and allows you to call it. "
+    "Now that the first two agents are serving over A2A, our main agent can be given access to use it just like a tool! In order to do this you use the `a2a_tool_async` function which retrieves the info about the agent and allows you to call it. "
    ]
   },
   {
@@ -711,20 +711,20 @@
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
     "from any_agent.config import TracingConfig\n",
-    "from any_agent.tools import a2a_tool\n",
+    "from any_agent.tools import a2a_tool_async\n",
     "\n",
     "config = AgentConfig(\n",
     "    model_id=\"gpt-4.1-mini\",\n",
     "    instructions=\"Use the available tools to obtain additional information to answer the query.\",\n",
     "    description=\"The orchestrator that can use other agents via tools using the A2A protocol.\",\n",
     "    tools=[\n",
-    "        await a2a_tool(\n",
+    "        await a2a_tool_async(\n",
     "            \"http://localhost:5000/time\",\n",
     "            http_kwargs={\n",
     "                \"timeout\": 5\n",
     "            },  # This gives the time agent up to 5 seconds to respond to each request\n",
     "        ),\n",
-    "        await a2a_tool(\n",
+    "        await a2a_tool_async(\n",
     "            \"http://localhost:5001/location_recommender\",\n",
     "            http_kwargs={\n",
     "                \"timeout\": 5\n",
