refactor(tracing): Instrument at the instance level. (#435)
* refactor(tracing): Instrument at the instance level.

- Decouple `AgentTrace` generation from exporter.
- Create a single global exporter. No config.
- Drop `AnyAgent.exit`. instrument/uninstrument happens within `AnyAgent.run_async`.
- Add `instrument` argument allowing to force skip on `run` calls (use that in eval).

* fix llama_index tool_calls and remove outdated tests

* Update tests

* Fix langchain test

* Update docs

* Run updated lint

* Drop TracingConfig references

* fix openai parallel issues

* fix openai

* merge resolution

* Rename `drop_console_exporter` to `disable_console_traces` and add `enable_console_traces`.

- Add both methods to API Reference.
- Document how to disable console traces in the docs.

* Document `instrument`

* Add `SCOPE_NAME`

* Update src/any_agent/tracing/instrumentation/agno.py

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

* Update docs

* Add link to API Ref

* Update test_run_agent_twice to use `nano`

* fix lint

* Fix test_run_agent_twice to not rely on order

* fix(tinyagent): Don't hold `messages` at the instance level.

This was causing hidden issues when multiple `run_async` calls were invoked in parallel.

* Update `_running_traces` comment

* Update to respect existing trace provider

* Drop `mock_search`

---------

Co-authored-by: Nathan Brake <nathan@mozilla.ai>
Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/docs/cookbook/a2a_as_tool.ipynb
+++ b/docs/cookbook/a2a_as_tool.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
-    "from any_agent.config import MCPStdio, TracingConfig\n",
+    "from any_agent.config import MCPStdio\n",
     "from any_agent.serving import A2AServingConfig\n",
     "\n",
     "# This MCP Tool relies upon uvx https://docs.astral.sh/uv/getting-started/installation/\n",
@@ -99,12 +99,10 @@
     "        description=\"I'm an agent to help with getting the time\",\n",
     "        tools=[time_tool],\n",
     "    ),\n",
-    "    tracing=TracingConfig(console=False),\n",
     ")\n",
     "(time_task, time_server) = await time.serve_async(\n",
     "    A2AServingConfig(port=5000, endpoint=\"/time\")\n",
     ")\n",
-    "\n",
     "\n",
     "weather_expert = await AnyAgent.create_async(\n",
     "    \"google\",\n",
@@ -114,7 +112,6 @@
     "        instructions=\"You're an expert that is an avid skier, recommend a great location to ski given a time of the year\",\n",
     "        description=\"I'm an agent that is an expert in recommending my favorite location given a time of the year\",\n",
     "    ),\n",
-    "    tracing=TracingConfig(console=False),\n",
     ")\n",
     "(weather_task, weather_server) = await weather_expert.serve_async(\n",
     "    A2AServingConfig(port=5001, endpoint=\"/location_recommender\")\n",
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +707,6 @@
    ],
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
-    "from any_agent.config import TracingConfig\n",
     "from any_agent.tools import a2a_tool_async\n",
     "\n",
     "config = AgentConfig(\n",
@@ -736,7 +732,6 @@
     "agent = await AnyAgent.create_async(\n",
     "    agent_framework=\"agno\",\n",
     "    agent_config=config,\n",
-    "    tracing=TracingConfig(console=True),\n",
     ")\n",
     "\n",
     "agent_trace = await agent.run_async(\"Where should I go this weekend to ski?\")\n",
