--- a/docs/cookbook/serve_a2a.ipynb
+++ b/docs/cookbook/serve_a2a.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "from any_agent import AgentConfig, AnyAgent\n",
-    "from any_agent.config import MCPStdio, TracingConfig\n",
+    "from any_agent.config import MCPStdio\n",
     "from any_agent.serving import A2AServingConfig\n",
     "\n",
     "# This MCP Tool relies upon uvx https://docs.astral.sh/uv/getting-started/installation/\n",
@@ -99,7 +99,6 @@
     "        description=\"I'm an agent to help with getting the time\",\n",
     "        tools=[time_tool],\n",
     "    ),\n",
-    "    tracing=TracingConfig(console=False),\n",
     ")\n",
     "(time_task, time_server) = await time.serve_async(A2AServingConfig(port=5000))"
    ]
