--- a/docs/cookbook/serve_a2a.ipynb
+++ b/docs/cookbook/serve_a2a.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,9 @@
     "        \"messageId\": uuid4().hex,\n",
     "    },\n",
     "}\n",
-    "request = SendMessageRequest(params=MessageSendParams(**send_message_payload))\n",
+    "request = SendMessageRequest(\n",
+    "    id=str(uuid4()), params=MessageSendParams(**send_message_payload)\n",
+    ")\n",
     "response = await client.send_message(request)\n",
     "# Close the httpx client when done\n",
     "await httpx_client.aclose()"
