Run Cookbook Tests in pytest, in parallel (#549)
* chore: Update cookbook testing workflow and add tests

- Renamed workflow from "Tests for Cookbooks" to "Cookbook Tests" for clarity.
- Updated the testing command to use `pytest` for running tests in the cookbook directory.
- Added a new test file to validate that all Jupyter notebooks in the cookbook execute without errors, enhancing our testing coverage.
- Introduced an environment variable check in the `mcp_agent.ipynb` notebook to mock user input during tests. 🎉

* Run cookbooks in parallel

* lint

--- a/docs/cookbook/mcp_agent.ipynb
+++ b/docs/cookbook/mcp_agent.ipynb
@@ -128,6 +128,8 @@
     "        str: The response from the user.\n",
     "\n",
     "    \"\"\"\n",
+    "    if os.environ.get(\"IN_PYTEST\") == \"1\":\n",
+    "        return \"2 people, next weekend, low budget. Do not ask for any more information or confirmation.\"\n",
     "    return input(message + \" \")\n",
     "\n",
     "\n",
