fix: more lenient timout for notebook a2a client

--- a/docs/cookbook/serve_a2a.ipynb
+++ b/docs/cookbook/serve_a2a.ipynb
@@ -383,7 +383,7 @@
     "request = SendMessageRequest(\n",
     "    id=str(uuid4()), params=MessageSendParams(**send_message_payload)\n",
     ")\n",
-    "response = await client.send_message(request)\n",
+    "response = await client.send_message(request, http_kwargs={\"timeout\": 30.0})\n",
     "# Close the httpx client when done\n",
     "await httpx_client.aclose()"
    ]
