feat(tracing): Add `any_agent/tracing/attributes`. (#614)
* feat(tracing): Add `any_agent/tracing/attributes`.

- Define constants and reuse them across the codebase.
- Add references in docs.

* Import `span_attrs` module and use constants from there.

* Use tokens and cost constants

* Expose `GenAI` class.

* Update docs/agents/callbacks.md

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

* Revert a2a changes

* revert span_cost logic change

---------

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/docs/cookbook/callbacks.ipynb
+++ b/docs/cookbook/callbacks.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "41945c61",
    "metadata": {},
    "outputs": [],
@@ -392,6 +392,7 @@
     "\n",
     "from any_agent.callbacks.base import Callback\n",
     "from any_agent.callbacks.context import Context\n",
+    "from any_agent.tracing.attributes import GenAI\n",
     "\n",
     "\n",
     "class SensitiveDataOffloader(Callback):\n",
@@ -402,12 +403,12 @@
     "    def before_llm_call(self, context: Context, *args, **kwargs) -> Context:\n",
     "        span = context.current_span\n",
     "\n",
-    "        if input_messages := span.attributes.get(\"gen_ai.input.messages\"):\n",
+    "        if input_messages := span.attributes.get(GenAI.INPUT_MESSAGES):\n",
     "            output_file = self.output_dir / f\"{span.get_span_context().trace_id}.txt\"\n",
     "            output_file.write_text(str(input_messages))\n",
     "\n",
     "            span.set_attribute(\n",
-    "                \"gen_ai.input.messages\", json.dumps({\"ref\": str(output_file)})\n",
+    "                GenAI.INPUT_MESSAGES, json.dumps({\"ref\": str(output_file)})\n",
     "            )\n",
     "\n",
     "        return context"
@@ -696,7 +697,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "any-agent",
    "language": "python",
    "name": "python3"
   },
