chore(docs): Update tool usage checks. (#647)
* chore(docs): Update tool usage checks.

We should showcase the iteration on `agent_trace.spans` so we are consistent with the API we use in the callbacks.

Also, the check based on messages can yield false positives because we are doing plain string matching on any assistant message.

For example, if the assistant returns something like:

```
I decided to not use the tool search_web because I can provide the answer without it
```

The current check will pass but the tool was not actually used.

* fix tests

--- a/docs/cookbook/your_first_agent_evaluation.ipynb
+++ b/docs/cookbook/your_first_agent_evaluation.ipynb
@@ -339,11 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from any_agent.tracing.agent_trace import AgentTrace\n",
+    "from any_agent.tracing.attributes import GenAI\n",
+    "\n",
+    "\n",
+    "def check_tool_usage(trace: AgentTrace, required_tool: str) -> bool:\n",
+    "    \"\"\"Check if a specific tool was used in the trace.\"\"\"\n",
+    "    return any(\n",
+    "        span.attributes[GenAI.TOOL_NAME] == required_tool\n",
+    "        for span in trace.spans\n",
+    "        if span.is_tool_execution()\n",
+    "    )\n",
     "\n",
     "\n",
     "def evaluate_web_search_efficiency(trace: AgentTrace) -> dict:\n",
@@ -354,15 +364,8 @@
     "    final_output = trace.final_output\n",
     "    duration = trace.duration.total_seconds()\n",
     "    # Check if web search tools were used\n",
-    "    messages = trace.spans_to_messages()\n",
-    "    used_search = any(\n",
-    "        message.role == \"assistant\" and \"search_tavily\" in str(message.content)\n",
-    "        for message in messages\n",
-    "    )\n",
-    "    used_visit = any(\n",
-    "        message.role == \"assistant\" and \"visit_webpage\" in str(message.content)\n",
-    "        for message in messages\n",
-    "    )\n",
+    "    used_search = check_tool_usage(trace, \"search_tavily\")\n",
+    "    used_visit = check_tool_usage(trace, \"visit_webpage\")\n",
     "    # Apply quantitative criteria\n",
     "    results = {\n",
     "        \"token_efficient\": token_count\n",
