docs: Index `Local Agent` cookbook.

--- a/docs/cookbook/agent_with_local_llm.ipynb
+++ b/docs/cookbook/agent_with_local_llm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fully offline Agent!\n",
+    "# Local Agent\n",
     "\n",
     "_(no Google Colab for this one since it is meant to be run entirely locally)_\n",
     "\n",
