Print the correct key (#783)

--- a/docs/cookbook/your_first_agent.ipynb
+++ b/docs/cookbook/your_first_agent.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "for key in (\"MISTRAL_API_KEY\", \"TAVILY_API_KEY\"):\n",
     "    if key not in os.environ:\n",
     "        print(f\"{key} not found in environment!\")\n",
-    "        api_key = getpass(\"Please enter your MISTRAL_API_KEY: \")\n",
+    "        api_key = getpass(f\"Please enter your {key}: \")\n",
     "        os.environ[key] = api_key\n",
     "        print(f\"{key} set for this session!\")\n",
     "    else:\n",
